Java 21 upgrade (#173)
* Upgrade of Java 17 -> 21.

Changed Docker image eclipse-temurin:17.0.9_9-jre-alpine -> amazoncorretto:21.0.1-alpine as where is no Temurin image for Java 17 on Docker Hub.

Added -XX:+EnableDynamicAgentLoading in maven-surefire/failsafe-plugins to fix warning on dynamic loading of Java agent.

Added -proc:full compiler option in maven-compiler-plugin for some projects to fix warning on annotation processing.

* Changed to Java 21 in GitHub action setup-java.